--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,29 +25,34 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/Suneetha.Kotapati/OneDrive - Vertex, Inc/Documents/API_UI_Demo</a></td><td class="numi">6</td><td class="numi">6</td><td class="numi">0</td><td class="numi">0</td><td class="numi">34.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Api test cases</a></td><td class="numi">5</td><td class="numi">5</td><td class="numi">0</td><td class="numi">0</td><td class="numi">7.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="stripe"><td style="text-align:left;padding-right:2em"><a href="#t2">Ui test cases with Listeners</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">32.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="total"><td>Total</td>
+<td class="numi">6</td><td class="numi">6</td><td class="numi">0</td><td class="numi">0</td><td class="numi">40.3 seconds</td><td colspan="2">&nbsp;</td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">C:/Users/Suneetha.Kotapati/OneDrive - Vertex, Inc/Documents/API_UI_Demo &#8212; passed</th></tr>
-<tr class="passedodd"><td>com.persistent.register.api.tests.PostEmployee</td><td><a href="#m1"><b>postEmployee</b>  </a></td><td class="numi">1</td><td>1673460863247</td><td class="numi">1272</td></tr>
-<tr class="passedeven"><td>com.persistent.register.ui.tests.TestClass</td><td><a href="#m2"><b>verify</b>  </a></td><td class="numi">1</td><td>1673460876720</td><td class="numi">15022</td></tr>
-<tr class="passedodd"><td>com.persistent.register.api.tests.GetAllEmployees</td><td><a href="#m3"><b>getEmployees</b>  </a></td><td class="numi">1</td><td>1673460862470</td><td class="numi">409</td></tr>
-<tr class="passedeven"><td>com.persistent.register.api.tests.GetParticularEmployee</td><td><a href="#m4"><b>getEmployeeById</b>  </a></td><td class="numi">1</td><td>1673460862881</td><td class="numi">365</td></tr>
-<tr class="passedodd"><td>com.persistent.register.api.tests.DeleteEmployee</td><td><a href="#m5"><b>getEmployeeById</b>  </a></td><td class="numi">1</td><td>1673460859403</td><td class="numi">3063</td></tr>
-<tr class="passedeven"><td>com.persistent.register.api.tests.UpdateEmployee</td><td><a href="#m6"><b>updateEmployee</b>  </a></td><td class="numi">1</td><td>1673460864521</td><td class="numi">1253</td></tr>
+<tr id="t1"><th colspan="5">Api test cases &#8212; passed</th></tr>
+<tr class="passedodd"><td>com.persistent.register.api.tests.GetAllEmployees</td><td><a href="#m1"><b>getEmployees</b>  </a></td><td class="numi">1</td><td>1673507217509</td><td class="numi">951</td></tr>
+<tr class="passedeven"><td>com.persistent.register.api.tests.PostEmployee</td><td><a href="#m2"><b>postEmployee</b>  </a></td><td class="numi">1</td><td>1673507219425</td><td class="numi">1139</td></tr>
+<tr class="passedodd"><td>com.persistent.register.api.tests.DeleteEmployee</td><td><a href="#m3"><b>deleteEmployeeById</b>  </a></td><td class="numi">1</td><td>1673507214561</td><td class="numi">2944</td></tr>
+<tr class="passedeven"><td>com.persistent.register.api.tests.GetParticularEmployee</td><td><a href="#m4"><b>getEmployeeById</b>  </a></td><td class="numi">1</td><td>1673507218461</td><td class="numi">963</td></tr>
+<tr class="passedodd"><td>com.persistent.register.api.tests.UpdateEmployee</td><td><a href="#m5"><b>updateEmployee</b>  </a></td><td class="numi">1</td><td>1673507220567</td><td class="numi">1385</td></tr>
+<tr id="t2"><th colspan="5">Ui test cases with Listeners &#8212; passed</th></tr>
+<tr class="passedodd"><td>com.persistent.register.ui.tests.TestClass</td><td><a href="#m6"><b>verify</b>  </a></td><td class="numi">1</td><td>1673507238756</td><td class="numi">15100</td></tr>
 </table>
-<h1>C:/Users/Suneetha.Kotapati/OneDrive - Vertex, Inc/Documents/API_UI_Demo</h1>
-<h2 id="m1">com.persistent.register.api.tests.PostEmployee:postEmployee</h2>
+<h1>Api test cases</h1>
+<h2 id="m1">com.persistent.register.api.tests.GetAllEmployees:getEmployees</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.persistent.register.ui.tests.TestClass:verify</h2>
+<h2 id="m2">com.persistent.register.api.tests.PostEmployee:postEmployee</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.persistent.register.api.tests.GetAllEmployees:getEmployees</h2>
+<h2 id="m3">com.persistent.register.api.tests.DeleteEmployee:deleteEmployeeById</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m4">com.persistent.register.api.tests.GetParticularEmployee:getEmployeeById</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.persistent.register.api.tests.DeleteEmployee:getEmployeeById</h2>
+<h2 id="m5">com.persistent.register.api.tests.UpdateEmployee:updateEmployee</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.persistent.register.api.tests.UpdateEmployee:updateEmployee</h2>
+<h1>Ui test cases with Listeners</h1>
+<h2 id="m6">com.persistent.register.ui.tests.TestClass:verify</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
