--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -39,7 +39,7 @@ td,th {border:1px solid #009;padding:.25em .5em}
 	<tr class="passedeven"><td>com.persistent.register.api.tests.GetParticularEmployee</td><td><a href="#m4"><b>getEmployeeById</b>  </a></td><td class="numi">1</td><td>1673507218461</td><td class="numi">963</td></tr>
 	<tr class="passedodd"><td>com.persistent.register.api.tests.UpdateEmployee</td><td><a href="#m5"><b>updateEmployee</b>  </a></td><td class="numi">1</td><td>1673507220567</td><td class="numi">1385</td></tr>
 	<tr id="t2"><th colspan="5">Ui test cases with Listeners &#8212; passed</th></tr>
-	<tr class="passedodd"><td>com.persistent.register.ui.tests.TestClass</td><td><a href="#m6"><b>verify</b>  </a></td><td class="numi">1</td><td>1673507238756</td><td class="numi">15100</td></tr>
+	<tr class="passedodd"><td>com.persistent.register.ui.tests.RegistrationTests</td><td><a href="#m6"><b>verify</b>  </a></td><td class="numi">1</td><td>1673507238756</td><td class="numi">15100</td></tr>
 </table>
 <h1>Api test cases</h1>
 <h2 id="m1">com.persistent.register.api.tests.GetAllEmployees:getEmployees</h2>
@@ -53,6 +53,6 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <h2 id="m5">com.persistent.register.api.tests.UpdateEmployee:updateEmployee</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h1>Ui test cases with Listeners</h1>
-<h2 id="m6">com.persistent.register.ui.tests.TestClass:verify</h2>
+<h2 id="m6">com.persistent.register.ui.tests.RegistrationTests:verify</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
