Solving Stale Element Exception

--- a/PIP Task2/XYZ_BANK_APPLICATION/test-output/emailable-report.html
+++ b/PIP Task2/XYZ_BANK_APPLICATION/test-output/emailable-report.html
@@ -25,28 +25,28 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">UI test case</a></td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">70.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">UI test case</a></td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">59.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">UI test case &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="3">com.persistent.xyzbank.ui.tests.XYZBankTests</td><td><a href="#m1"><b>deleteAccount</b>  </a></td><td class="numi">1</td><td>1677658417604</td><td class="numi">20441</td></tr><tr class="passedodd"><td><a href="#m2"><b>addCustomers</b>  </a></td><td class="numi">1</td><td>1677658382004</td><td class="numi">8009</td></tr><tr class="passedodd"><td><a href="#m3"><b>customerLogin</b>  </a></td><td class="numi">1</td><td>1677658390019</td><td class="numi">27583</td></tr>
+<tr class="passedodd"><td rowspan="3">com.persistent.xyzbank.ui.tests.XYZBankTests</td><td><a href="#m1"><b>customerLogin</b>  </a></td><td class="numi">1</td><td>1678098236937</td><td class="numi">25047</td></tr><tr class="passedodd"><td><a href="#m2"><b>addCustomers</b>  </a></td><td class="numi">1</td><td>1678098230533</td><td class="numi">6401</td></tr><tr class="passedodd"><td><a href="#m3"><b>deleteAccount</b>  </a></td><td class="numi">1</td><td>1678098261985</td><td class="numi">20460</td></tr>
 </table>
 <h1>UI test case</h1>
-<h2 id="m1">com.persistent.xyzbank.ui.tests.XYZBankTests:deleteAccount</h2>
+<h2 id="m1">com.persistent.xyzbank.ui.tests.XYZBankTests:customerLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>org.testng.TestRunner@7b6860f9</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m2">com.persistent.xyzbank.ui.tests.XYZBankTests:addCustomers</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
-<tr class="param stripe"><td>org.testng.TestRunner@6c806c8b</td>
+<tr class="param stripe"><td>org.testng.TestRunner@7b6860f9</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.persistent.xyzbank.ui.tests.XYZBankTests:customerLogin</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th></tr>
-<tr class="param stripe"><td>org.testng.TestRunner@6c806c8b</td>
-</tr>
-</table>
+<h2 id="m3">com.persistent.xyzbank.ui.tests.XYZBankTests:deleteAccount</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
